@@ -66,11 +66,6 @@ public class TruncateResponseHandler implements IAsyncCallback
         }
     }
 
-    public void skip()
-    {
-        responses.incrementAndGet();
-    }
-
     public void response(MessageIn message)
     {
         responses.incrementAndGet();
