@@ -1,4 +1,5 @@
 2.1.12
+ * Warn or fail when changing cluster topology live (CASSANDRA-10243)
  * Fix CompressedInputStream for proper cleanup (CASSANDRA-10012)
  * (cqlsh) Support counters in COPY commands (CASSANDRA-9043)
  * Try next replica if not possible to connect to primary replica on
